# pbrt_proto

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: tests.yml
pbrt_proto/: BUILD  pbrt.proto  schema_test.cc
pbrt_proto/shared/: BUILD  accelerators.cc  accelerators.h  accelerators_test.cc  area_light_sources.cc  area_light_sources.h  area_light_sources_test.cc  cameras.cc  cameras.h  cameras_test.cc  common.cc  common.h  common_test.cc  common_test.proto  enums.h  enums_generator.cc  films.cc  films.h  films_test.cc  integrators.cc  integrators.h  integrators_test.cc  light_sources.cc  light_sources.h  light_sources_test.cc  materials.cc  materials.h  materials_test.cc  media.cc  media.h  media_test.cc  parser.cc  parser.h  parser_test.cc  pixel_filters.cc  pixel_filters.h  pixel_filters_test.cc  proto_parser.h  proto_parser.proto  proto_parser_test.cc  (+19 more)
pbrt_proto/testing/: BUILD  descriptors.cc  descriptors.h  field_compatibility.cc  field_compatibility.h  field_numbering.cc  field_numbering.h  message_compatibility.cc  message_compatibility.h  proto_matchers.h
pbrt_proto/v1/: BUILD  convert.cc  convert.h  convert_test.cc  defaults.proto  defaults.txtpb  defaults_test.cc  schema_test.cc  v1.proto
pbrt_proto/v2/: BUILD  convert.cc  convert.h  convert_test.cc  defaults.proto  defaults.txtpb  defaults_test.cc  schema_test.cc  v2.proto
pbrt_proto/v3/: BUILD  convert.cc  convert.h  convert_test.cc  defaults.cc  defaults.h  defaults.proto  defaults.txtpb  defaults_test.cc  pbrt.proto  (+2 more)
tools/: BUILD  pbrt_proto_converter.cc  pbrt_proto_converter_test.cc
(+343 files in other folders)
