"iris is a ray tracer written in C++23"
module(name = "pbrt_proto", version = "head", compatibility_level = 1)

# Bazel Central Registry dependencies
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
