"pbrt_proto is a pbrt to protobuf compatability layer"
module(name = "pbrt_proto", version = "head", compatibility_level = 1)

# Bazel Central Registry dependencies
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "googletest", version = "1.16.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "protobuf", version = "31.0-rc1")
